# LiveTranslate

./: .gitignore  asr_dashscope.py  benchmark.py  control_panel.py  dialogs.py  log_window.py  main.py  model_manager.py  pyproject.toml  requirements.txt  subtitle_overlay.py  subtitle_window.py  transcript_writer.py  translator.py  translator_api.py  vad_processor.py
i18n/: CHANGELOG_en.md  CHANGELOG_zh.md  en.yaml  zh.yaml
